# aiida-fireball

./: .pre-commit-config.yaml  .readthedocs.yaml  README.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml
docs/: requirements.txt
docs-enhanced/source/user_guide/: first_calculation.md
docs/source/: conf.py  index.md  index_complex.md  index_old.md
docs/source/_static/: modern.css
docs/source/examples/: index.md
docs/source/reference/: index.md
docs/source/user_guide/: first_calculation.md  get_started.md  get_started.rst  index.rst  installation.md  transport_tutorial.md  workflows.md
examples/: example_01.py
src/aiida_fireball/: _version.py
src/aiida_fireball/calculations/: base.py  fireball.py  scf.py  utils.py  validation.py
src/aiida_fireball/calculations/structure/: tools.py
src/aiida_fireball/parsers/: fireball.py  parse_raw.py  raw.py  scf.py
src/aiida_fireball/workflows/: __init__.py  birch_murnaghan_relax.py  dos.py  kpoints.py  relax.py  scf.py  transport_calc.py
tests/: conftest.py
tests/calculations/: test_base.py  test_fireball.py  test_scf.py  test_utils.py
tests/calculations/test_base/: test_fireball_default_False_False_.in  test_fireball_default_False_True_.bas  test_fireball_default_True_False_.kpts  test_fireball_fixed_coords.in
tests/calculations/test_fireball/: test_fireball_default_False_True_.in  test_fireball_default_False_True_.kpts  test_fireball_default_True_False_.lvs  test_fireball_dos_settings.in
tests/calculations/test_scf/: test_fireball_default.in
tests/parsers/: test_fireball_parser.py  test_parse_raw.py  test_raw.py  test_scf.py
tests/parsers/fixtures/fireball/default/: aiida.out
tests/parsers/test_fireball_parser/: test_fireball_default.yml
